--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exceljs",
+  "name": "@lineleap/exceljs",
   "version": "4.4.0",
   "description": "Excel Workbook Manager - Read and Write xlsx and csv Files.",
   "private": false,
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/exceljs/exceljs.git"
+    "url": "https://github.com/lineleap/exceljs.git"
   },
   "engines": {
     "node": ">=8.3.0"
